--- a/src/components/Walkthrough/styles/walkthroughprocessesandproducts.scss
+++ b/src/components/Walkthrough/styles/walkthroughprocessesandproducts.scss
@@ -1,6 +1,10 @@
 @import 'styles/constants.scss';
 
 .walkthrough-processes-and-products {
+    div.card {
+    min-width: 700px;
+    text-align: center;
+    }
     .bold {
         font-weight: bold;
     }
