--- a/src/components/Navbar/styles/navigation.scss
+++ b/src/components/Navbar/styles/navigation.scss
@@ -93,12 +93,12 @@
 			border: none;
 
 			input {
-				color: white;
+				//color: white;
 			}
 
 			div.Select.is-focused > div.Select-control {
 				background-color: rgba(0,0,0,0) !important;
-				color: rgba(255,255,255, 0.7) !important;
+				//color: rgba(255,255,255, 0.7) !important;
 			}
 		}
 
