--- a/src/styles/oldstyles/layout.scss
+++ b/src/styles/oldstyles/layout.scss
@@ -1,3 +1,5 @@
+@import 'styles/constants.scss';
+
 *, *:before, *:after {
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -9,151 +11,46 @@ img:before {
   background-image: url(/dashboard/static/dashboard/img/default@3x.png);
 }
 
+@font-face {
+	font-family: 'Material Icons';
+	font-style: normal;
+	font-weight: 400;
+	//src: url(iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
+	src: local('Material Icons'),
+	local('MaterialIcons-Regular'),
+	// /* Old file: url(iconfont/MaterialIcons-Regular.woff2) format('woff2'), */
+	// /* load new file */
+	// url(2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2'),
+	// url(iconfont/MaterialIcons-Regular.ttf) format('truetype');
+}
 
-// .d-nav{
-//   flex: 0 0 13em;
-//   transition: flex 0.3s;
-//   border-right: 1px solid #EAEAEA;
-// }
-
-// .pushout {
-//   width: 32px;
-//   height: 32px;
-//   box-shadow: $shadow-1;
-//   border-radius: 100%;
-//   position: fixed;
-//   background-color: white;
-//   top: 5px;
-//   left: 8px;
-// }
-
-// .d-nav.littleNav {
-//   flex: 0 0 16px;
-//   &>div.bar {
-//     display: none;
-//   }
-// }
-
-// .d-ads {
-// 	//flex: 0 0 20em;
-// }
-
-// .d-nav {
-//   /* put the nav on the left */
-//   order: -1;
-//   //background-color: #505256;
-//   height: 100vh;
-//  	display: flex;
-//  	flex-direction: column;
-//  	color: rgba(98,98,98,0.56);
-
-//   .bar {
-//     position: relative;
-//     top: 0;
-//   }
-
-// 	ul { margin: 0 auto; }
-
-// 	li {
-// 		list-style-type: none;
-
-// 		a, a:hover, a:visited {
-// 			display: block;
-// 			line-height: $navbar-height;
-// 			text-decoration: none;
-// 			color: rgba(98,98,98,0.56);
-// 			margin-left: 16px;
-
-// 			&.active {
-// 				background-color: $primary;
-// 				color: white;
-// 				width: 100%;
-// 				padding-left: 16px;
-// 				margin-left: 0px;
-
-// 				&, &:hover, &:visited {
-// 					color: white;	
-// 				}
-// 			}
-// 		}
-// 	}
-
-// }
-
-// i.material-icons {
-// 	color: rgba(0,0,0,0.5);
+.material-icons {
+	font-family:'Material Icons';
+	font-style: normal;
+}
 
 
-// 	&:hover {
-// 		color: blue;
-// 	}
+label {
+	font-size: 12px;
+	line-height: 16px;
+	padding: 8px 8px 8px 0;
+}
 
-// }
+textarea {
+	border: 1px solid $light-gray;
+	border-radius: 4px;
+	padding: 8px;
+	resize: none;
+}
 
-// .loading {
-// 	display: none;
-// }
+.Select-control {
+	outline: none;
+	border-radius: 4px;
+	border: 1px solid $light-gray;
+}
 
-// .noresults {
-// 	margin-top: 32px;
-// 	text-align: center;
-// 	span {
-// 		font-size: 18px;
-// 		color: rgba(0,0,0,0.3);
-// 		text-align: middle;
-// 	}
+.Select-placeholder {
+	padding-left: 8px;
+	font-size: 14px;
+}
 
-// }
-
-// div[data-react-toolbox="dropdown"] {
-
-//   &>div {
-//     padding: 0;
-//   }
-
-//   input {
-//     font-size: 14px;
-//   }
-// }
-
-// .d-nav div[data-react-toolbox="dropdown"] {
-// 	&>div {
-// 		padding: 0px;
-// 		margin: 0px;
-// 	}
-
-// 	ul {
-// 		color: rgba(0,0,0,0.6)
-// 	}
-
-// 	input {
-// 		margin: 0px;
-// 		padding: 0px;
-// 		padding-top: 4px;
-// 		outline: none;
-// 		border: none;
-// 	}
-// }
-
-// .d-nav div[data-react-toolbox="dropdown"] input {
-//   color: rgba(255,255,255,0.56)
-// }
-
-// .d-top {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 54px;
-//   min-height: 54px;
-//   background-color: white;
-//   box-shadow: $shadow-0;
-//   line-height: 54px;
-//   display: flex;
-//   flex-direction: row;
-//   padding: 0px 16px;
-
-//   .nav-brand {
-//     flex: 1;
-//   }
-// }
