Fixed Product Team name on task details page

--- a/src/components/TaskAttribute/styles/taskattribute.scss
+++ b/src/components/TaskAttribute/styles/taskattribute.scss
@@ -26,6 +26,7 @@
 	flex-direction: row;
 	align-items: center;
 	height: 40px;
+	min-width: 320px;
 
 	.task-attribute-edit-button {
 		min-width: 32px;
