--- a/src/components/Login/styles/login.scss
+++ b/src/components/Login/styles/login.scss
@@ -1,22 +1,23 @@
 @import 'styles/constants.scss';
 
-.login {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	padding-bottom: 100px;
-	background-color: #F6F8F9;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+// .login {
+// 	position: absolute;
+// 	top: 0;
+// 	left: 0;
+// 	width: 100%;
+// 	height: 100%;
+// 	padding-bottom: 100px;
+// 	background-color: #F6F8F9;
+// 	display: flex;
+// 	justify-content: center;
+// 	align-items: center;
+// 	-webkit-font-smoothing: antialiased;
+// 	-moz-osx-font-smoothing: grayscale;
 
 	.login-box form {
 		display: flex;
 		flex-direction: column;
+		align-items: center;
 
 		&>input, &>button, &>span {
 			margin: 10px;
@@ -61,5 +62,4 @@
 		max-width: 300px;
 		display: block;
 	}
-}
 
