--- a/src/components/FormDialog/styles/formdialog.scss
+++ b/src/components/FormDialog/styles/formdialog.scss
@@ -29,7 +29,7 @@ body div.dialog-container .form-dialog {
         margin-bottom: 8px;
     }
 
-    .Select, input {
+    .form-field {
         margin: 8px 0 24px;
     }
 
@@ -38,11 +38,15 @@ body div.dialog-container .form-dialog {
         width: 100%;
         height: 36px;
 
+    }
+
+    input {
+        font-family: Apercu;
+        font-size: 14px;
+        padding-left: 8px;
+
         &::placeholder {
             color: $gray;
-            font-family: Apercu;
-            font-size: 14px;
-            padding-left: 8px;
         }
     }
 
