--- a/src/components/Card/styles/ButtonDropdown.scss
+++ b/src/components/Card/styles/ButtonDropdown.scss
@@ -34,7 +34,7 @@ div.button-dropdown {
 
 		z-index: 999;
 		&>button {
-			background-color: $dark-theme-color;
+			background-color: $primary-dark;
 
 			&.secondary {
 				background-color: rgba(0,0,0,0);
