--- a/src/components/Application/styles/layout.scss
+++ b/src/components/Application/styles/layout.scss
@@ -1,20 +1,20 @@
 @import 'styles/reset.scss';
 @import 'styles/constants.scss';
 
-$sans-stack:'Apercu', 'Interface', 'Helvetica';
-$background-color: #F8F8F8;
-$red: #DD5151;
-$black: rgba(0,0,0,0.86);
-$gray: rgba(0,0,0,0.48);
-$light-gray: rgba(0,0,0,0.06);
-$theme-color: #0073F9; //#2198EE; //42AFFF;
-$dark-theme-color: #0465D8;
-$baseline: 8px;
-$nav-width: 144px;
-$nav-height: 64px;
-$top-padding: 48px;
-$card-shadow: 0 2px 4px 0 rgba(0,0,0,0.04);
-$panel-width: 300px;
+// $sans-stack:'Apercu', 'Interface', 'Helvetica';
+// $background-color: #F8F8F8;
+// $red: #DD5151;
+// $black: rgba(0,0,0,0.86);
+// $gray: rgba(0,0,0,0.48);
+// $light-gray: rgba(0,0,0,0.06);
+// $theme-color: #0073F9; //#2198EE; //42AFFF;
+// $dark-theme-color: #0465D8;
+// $baseline: 8px;
+// $nav-width: 144px;
+// $nav-height: 64px;
+// $top-padding: 48px;
+// $card-shadow: 0 2px 4px 0 rgba(0,0,0,0.04);
+// $panel-width: 300px;
 
 @font-face {
  font-family: "Apercu";
