--- a/src/components/ObjectList/styles/objectlistitem.scss
+++ b/src/components/ObjectList/styles/objectlistitem.scss
@@ -13,7 +13,7 @@
     box-shadow: $light-gray 0 2px 4px 0;
 
     &:hover {
-        background-color: $light-grey;
+        background-color: $light-gray;
     }
 
     &>div:first-child {
