changed all light-gray to gray-light

--- a/src/components/Alerts/styles/alerts.scss
+++ b/src/components/Alerts/styles/alerts.scss
@@ -101,7 +101,7 @@ $alert-yellow: #F8DE00;
 }
 
 .alerts-empty {
-	background-color: $light-gray;
+	background-color: $gray-light;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
