--- a/src/components/ArchiveDialog/styles/archivedialog.scss
+++ b/src/components/ArchiveDialog/styles/archivedialog.scss
@@ -10,7 +10,7 @@
 .archive-rule {
 	margin: 16px;
 	margin-bottom: 16px;
-	background-color: $light-gray;
+	background-color: $gray-light;
 	height: 1px;
 }
 
