--- a/src/components/ProcessAttribute/styles/processattribute.scss
+++ b/src/components/ProcessAttribute/styles/processattribute.scss
@@ -23,7 +23,7 @@
 
 .process-attribute {
 	cursor: default;
-	border: 1px solid $light-gray;
+	border: 1px solid $gray-light;
 	border-radius: 4px;
 	margin-bottom: 16px;
 	padding: 16px;
