--- a/src/components/TaskSelect/styles/taskselect.scss
+++ b/src/components/TaskSelect/styles/taskselect.scss
@@ -4,7 +4,7 @@
     width: 100%;
     max-width: 900px;
     display: flex;
-    background-color: $light-gray;
+    background-color: $gray-light;
 
     i {
         line-height: 34px;
