--- a/src/styles/oldstyles/layout.scss
+++ b/src/styles/oldstyles/layout.scss
@@ -37,7 +37,7 @@ label {
 }
 
 textarea {
-	border: 1px solid $light-gray;
+	border: 1px solid $gray-light;
 	border-radius: 4px;
 	padding: 8px;
 	resize: none;
@@ -46,7 +46,7 @@ textarea {
 .Select-control {
 	outline: none;
 	border-radius: 4px;
-	border: 1px solid $light-gray;
+	border: 1px solid $gray-light;
 }
 
 .Select-placeholder {
