--- a/src/components/Card/styles/card.scss
+++ b/src/components/Card/styles/card.scss
@@ -8,14 +8,14 @@
 	background-color:white;
 
 	.rule {
-		background-color: $light-gray;
+		background-color: $gray-light;
 		height: 1px;
 		margin: 16px;
 		margin-bottom: 15px;
 	}
 
 	.cardrule-v2 {
-		background-color: $light-gray;
+		background-color: $gray-light;
 		margin-left: -16px;
 		width: calc(100% + 32px);
 		height: 1px;
@@ -44,7 +44,7 @@
 
 .icon {
 	display: inline-block;
-	background-color: $light-gray;
+	background-color: $gray-light;
 
 	border-radius: 16px;
 	margin-right: 8px;
@@ -61,7 +61,7 @@
 .select-circle {
 	width: 16px;
 	padding-bottom: 16px;
-	border: 1px solid $light-gray;
+	border: 1px solid $gray-light;
 	border-radius: 16px;
 
 	&.selected {
