--- a/src/components/Navbar/styles/navigation.scss
+++ b/src/components/Navbar/styles/navigation.scss
@@ -11,7 +11,7 @@
 	width: $nav-width;
 	display: flex;
 	flex-direction: column;
-	border-right: 1px solid $light-gray;
+	border-right: 1px solid $gray-light;
 
 	color: $gray;
 	font-size: 13px;
