--- a/src/components/ObjectList/styles/objectlistitem.scss
+++ b/src/components/ObjectList/styles/objectlistitem.scss
@@ -10,10 +10,10 @@
     padding: 0 20px;
     background-color: white;
     border-radius: 4px;
-    box-shadow: $light-gray 0 2px 4px 0;
+    box-shadow: $gray-light 0 2px 4px 0;
 
     &:hover {
-        background-color: $light-gray;
+        background-color: $gray-light;
     }
 
     &>div:first-child {
