--- a/src/components/Products/styles/createproductdialog.scss
+++ b/src/components/Products/styles/createproductdialog.scss
@@ -30,7 +30,7 @@
         margin-bottom: 12px;
 
         textarea {
-            border: 1px solid $light-gray;
+            border: 1px solid $gray-light;
             border-radius: 4px;
             line-height: 16px;
             padding: 8px;
