--- a/src/components/Products/styles/products.scss
+++ b/src/components/Products/styles/products.scss
@@ -30,7 +30,7 @@
 		display: flex;
 		flex-direction: row;
 		line-height: 38px;
-		border-bottom: 1px solid $light-gray;
+		border-bottom: 1px solid $gray-light;
 		cursor: pointer; 
 
 		&>div {
