--- a/src/components/Walkthrough/styles/walkthroughframe.scss
+++ b/src/components/Walkthrough/styles/walkthroughframe.scss
@@ -1,10 +1,12 @@
+@import 'styles/constants.scss';
+
 .walkthrough {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #F6F8F9;
+	background-color: $elephant-ultra-light;
 	z-index: 999;
 	overflow: scroll;
 
