--- a/src/components/Inputs/styles/input.scss
+++ b/src/components/Inputs/styles/input.scss
@@ -1,12 +1,14 @@
-@import './select.scss';
+@import 'styles/constants.scss';
 
-.input-medium-gray {
-	//background-color: $medium-light-gray;
-	border: 0;
-	outline: 0;
-	border-radius: 4px;
-	padding: 8px;
-	line-height: 20px;
+input.input {
+	display: inline-block;
+	width: 100%;
+	height: 36px;
+	font-family: Apercu;
 	font-size: 14px;
-	font-family: 'Apercu';
+	padding-left: 8px;
+
+	&::placeholder {
+		color: $gray;
+	}
 }
