--- a/src/components/Card/styles/card.scss
+++ b/src/components/Card/styles/card.scss
@@ -92,9 +92,9 @@ body div.dialog-container {
 		max-width: 400px;
 		width: 400px;
 		position: fixed;
-		top: 30%;
+		top: 50%;
 		left: 50%;
-		transform: translateX(-50%) ;
+		transform: translateX(-50%) translateY(-50%);
 		z-index: 999;
 	}
 }
