changed some light grays to ultralight grays

--- a/src/components/TaskSelect/styles/taskselect.scss
+++ b/src/components/TaskSelect/styles/taskselect.scss
@@ -4,7 +4,8 @@
     width: 100%;
     max-width: 900px;
     display: flex;
-    background-color: $gray-light;
+    background-color: $gray-ultra-light;
+    border-radius: 4px;
 
     i {
         line-height: 34px;
