Added styling for Create a process dialog

--- a/src/components/Inputs/styles/input.scss
+++ b/src/components/Inputs/styles/input.scss
@@ -2,7 +2,7 @@
 
 input.input {
 	width: 100%;
-	border: 1px solid #DBE0E4;
+	border: 1px solid $gray-light;
 	border-radius: 4px;
     color: $black;
 	font-family: Apercu;
