--- a/src/components/ObjectList/styles/objectlisttitle.scss
+++ b/src/components/ObjectList/styles/objectlisttitle.scss
@@ -7,7 +7,7 @@
     justify-content: space-between;
     margin-bottom: 44px;
 
-    .button-dropdown button {
+    button {
         height: 23px;
         padding-top: 0;
         padding-bottom: 0;
