Updated styling for Create Product dialog

--- a/src/components/Inputs/styles/textarea.scss
+++ b/src/components/Inputs/styles/textarea.scss
@@ -14,4 +14,10 @@ textarea.textarea {
     &:focus {
         border-color: $theme-color;
     }
+
+    &::placeholder {
+        color: $gray;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
 }
