--- a/src/components/Inputs/styles/select.scss
+++ b/src/components/Inputs/styles/select.scss
@@ -17,5 +17,12 @@ div.select {
         box-shadow: none;
         //color: rgba(255,255,255, 0.7) !important;
     }
+
+    .defaultSelectOptionStyle {
+        margin-top: 10px;
+        border-bottom-style: solid;
+        border-width: 1px;
+        border-color: $gray-light;
+    }
 }
 
