Reformatted Alert Task dialog

--- a/src/components/Alerts/styles/alerts.scss
+++ b/src/components/Alerts/styles/alerts.scss
@@ -40,7 +40,7 @@ $alert-yellow: #F8DE00;
 		margin-top: 7px;
 	}
 
-	img {
+	.alert-icon {
 		height: 16px;
         position: absolute;
 		left: -8px;
