made some gray-light things gray-ultra-light

--- a/src/components/ObjectList/styles/objectlistheader.scss
+++ b/src/components/ObjectList/styles/objectlistheader.scss
@@ -5,7 +5,7 @@
     width: 100%;
     padding: 0 20px;
     margin-bottom: 6px;
-    color: $gray;
+    color: $elephant;
     font-size: 12px;
 }
 
