--- a/src/components/AccountMenu/styles/menu.scss
+++ b/src/components/AccountMenu/styles/menu.scss
@@ -5,7 +5,7 @@
 }
 
 .menu-section {
-	border-bottom: 1px solid $gray-light;
+	border-bottom: 1px solid $gray-ultra-light;
 
 	&:last-child {
 		border-bottom: none;
