--- a/src/components/Products/styles/products.scss
+++ b/src/components/Products/styles/products.scss
@@ -3,11 +3,15 @@
 .products {
 
 
+	.paginated-table.border-none li.header {
+		border-bottom: none; //override PaginatedTable header border
+	}
+
 	.code {
 		flex: 4;
 	}
 
-	.name {
+	.name {                
 		flex: 8;
 	}
 
