proper server error message

--- a/src/components/Loading/styles/loading.scss
+++ b/src/components/Loading/styles/loading.scss
@@ -4,6 +4,11 @@
     .sk-spinner {
         margin: 160px auto;
     }
+
+    .sk-three-bounce {
+    	height: 48px;
+    	position: relative;
+    }
 }
 
 
