--- a/src/components/ProductionTrends/styles/productiontrends.scss
+++ b/src/components/ProductionTrends/styles/productiontrends.scss
@@ -2,38 +2,7 @@
 
 .production-trends {
 
-    .axis path,
-    .axis line {
-        fill: none;
-        stroke: #000;
-        shape-rendering: crispEdges;
+    .options {
+        margin-bottom: 32px;
     }
-
-    .x.axis path {
-        display: none;
-    }
-
-    .line {
-        fill: none;
-        stroke: steelblue;
-        stroke-width: 1.5px;
-    }
-
-    .overlay {
-        fill: none;
-        pointer-events: all;
-    }
-
-    .focus circle {
-        fill: $elephant-light;
-        stroke: $elephant-dark;
-        stroke-width: 5px;
-    }
-
-    .hover-line {
-        stroke: $elephant-light;
-        stroke-width: 2px;
-        stroke-dasharray: 3,3;
-    }
-
 }
