process attribute inputs styling

--- a/src/components/ProcessAttribute/styles/processattributefield.scss
+++ b/src/components/ProcessAttribute/styles/processattributefield.scss
@@ -51,3 +51,13 @@
 		line-height: 20px;
 	}
 }
+
+.process-attribute-input {
+	
+}
+
+.process-attribute-select {
+	z-index: 4;
+	//overflow: scroll;
+}
+
