--- a/src/components/ProcessAttribute/styles/processattribute.scss
+++ b/src/components/ProcessAttribute/styles/processattribute.scss
@@ -55,12 +55,12 @@
 	}
 
 	.process-attribute-row {
-		display: flex;
+		//display: flex;
 
 		.process-attribute-field {
-			flex: 2;
+			//flex: 2;
 			&:last-child {
-				flex: 2;
+				//flex: 2;
 			}
 		}
 	}
