--- a/src/components/ProductPage/styles/productpage.scss
+++ b/src/components/ProductPage/styles/productpage.scss
@@ -42,6 +42,10 @@
 		font-size: 20px;
 		line-height: 24px;
 	}
+
+	.product-header-code-name {
+		margin-top: 10px;
+	}
 }
 
 .productpage .recipe-wrapper {
