Addded y axis labels and handle zero data case

--- a/src/components/CumulativeAreaChart/styles/cumulativeareachart.scss
+++ b/src/components/CumulativeAreaChart/styles/cumulativeareachart.scss
@@ -21,6 +21,10 @@
         opacity: 0.5;
     }
 
+    .y-axis-label {
+        font-size: 12px;
+    }
+
     .overlay {
         fill: none;
         pointer-events: all;
