--- a/src/components/ProductionTrends/styles/trendslinechart.scss
+++ b/src/components/ProductionTrends/styles/trendslinechart.scss
@@ -20,6 +20,10 @@
         stroke-width: 1.5px;
     }
 
+    .y-axis-label {
+        font-size: 12px;
+    }
+
     .overlay {
         fill: none;
         pointer-events: all;
