--- a/src/components/ProductionTrends/styles/linecharttooltip.scss
+++ b/src/components/ProductionTrends/styles/linecharttooltip.scss
@@ -11,7 +11,7 @@ $tooltip-background-color: rgba(31,36,41,1);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    padding-left: 16px;
     box-shadow: rgba(0,0,0,0.3) 0 2px 12px;
     -webkit-font-smoothing: antialiased;
 
