--- a/src/components/ProductionTrends/styles/productiontrends.scss
+++ b/src/components/ProductionTrends/styles/productiontrends.scss
@@ -23,9 +23,10 @@
     .trends-title {
         font-size: 20px;
         line-height: 32px;
-        color: $gray-dark;
-        padding-top: 5px;
-        padding-bottom: 11px;
+        color: white;
+        padding: 12px 32px;
+        background-color: $primary;
+        -webkit-font-smoothing: antialased;
     }
 
     .trends-subtitle {
