Add loading indicator when downloading a spreadsheet

--- a/src/styles/oldstyles/activity.scss
+++ b/src/styles/oldstyles/activity.scss
@@ -46,6 +46,14 @@ $z-index-edit-menu: 992;
           vertical-align: middle;
         }
       }
+
+      .loading-indicator {
+        height: 44px;
+        width: 48px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     }
 
     &.expanded {
