--- a/src/components/Card/styles/card.scss
+++ b/src/components/Card/styles/card.scss
@@ -97,4 +97,9 @@ body div.dialog-container {
 		transform: translateX(-50%) translateY(-50%);
 		z-index: 999;
 	}
+
+	.create-process-buttons {
+		display: flex;
+		justify-content: flex-end;
+	}
 }
