Added padding to top of processes and products list

--- a/src/components/ObjectList/styles/objectlisttitle.scss
+++ b/src/components/ObjectList/styles/objectlisttitle.scss
@@ -5,6 +5,7 @@
     flex-direction: row;
     color: $gray;
     justify-content: space-between;
+    margin-top: 24px;
     margin-bottom: 44px;
 
     button {
