z index on tooltip so it isnt hidden by navbar + date on tooltip now has month word instead of index

--- a/src/components/ProductionTrends/styles/linecharttooltip.scss
+++ b/src/components/ProductionTrends/styles/linecharttooltip.scss
@@ -3,6 +3,7 @@
 $tooltip-background-color: rgba(31,36,41,1);
 
 .line-chart-tooltip {
+    z-index: 2;
     position: absolute;
     background-color: $tooltip-background-color;
     color: $elephant-ultra-light;
