Show alert icon based on if there are alerts

--- a/src/components/Topbar/styles/topbar.scss
+++ b/src/components/Topbar/styles/topbar.scss
@@ -47,7 +47,7 @@
         align-items: center;
         margin: 0 36px;
 
-        i.alerts {
+        img.alerts {
             color: $primary;
             margin: 0 36px;
         }
