--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -49,7 +49,7 @@ $z-index-edit-menu: 992;
 
 //--------
 
-$sans-stack:'Apercu', 'Interface', 'Helvetica';
+$sans-stack: 'SF Pro Text', 'Apercu', 'Interface', 'Helvetica';
 $baseline: 8px;
 $nav-width: 64px;
 $nav-height: 64px;
