--- a/src/components/PaginatedTable/styles/paginatedtable.scss
+++ b/src/components/PaginatedTable/styles/paginatedtable.scss
@@ -11,10 +11,11 @@
 	.pagination {
 		width: 100%;
 		text-align: right;
-		font-size: 11px;
-		line-height: 12px;
+		font-size: 12px;
+		line-height: 24px;
 		margin-top: 8px;
 		color: rgba(0,0,0,0.3);
+		border-bottom: 1px solid $gray-ultra-light;
 
 		&>div, &>i {
 			margin: 0 0 0 8px;
@@ -24,7 +25,7 @@
 			color: rgba(0, 0, 0, 0.3);
 			vertical-align: middle;
 			cursor: pointer;
-			font-size: 20px;
+			font-size: 24px;
 
 			&.disabled {
 				color: $gray-light;
