--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -28,6 +28,8 @@ $elephant-dark: rgba(145, 161, 181, 1);
 $elephant-light: rgba(202, 208, 213, 1);
 $elephant-ultra-light: rgba(246, 248, 249, 1);
 
+$orange: rgba(254, 198, 44, 1);
+
 $background-color: $elephant-ultra-light;
 $theme-color: $primary;
 
@@ -56,3 +58,4 @@ $nav-height: 64px;
 $top-padding: 48px;
 $card-shadow: 0 0 8px 0 rgba(0,0,0,0.08);
 $panel-width: 300px;
+$section-header-height: 56px;
