--- a/src/components/Inventory2/styles/inventorydrawer.scss
+++ b/src/components/Inventory2/styles/inventorydrawer.scss
@@ -1,7 +1,8 @@
 @import 'styles/constants.scss';
 
 .inventory-drawer {
-	height: 100%;
+	min-height: 100%;
+	height: fit-content;
 	width: 368px;
 	background-color: white;
 	border-left: 1px solid $gray-ultra-light;
